do not save sshPassword if necessary
